@@ -10,7 +10,9 @@
 	* src/nact/nact-add-scheme-dialog.c:
 	* src/nact/nact-main-tab.c:
 	* src/nact/nact-clipboard.c:
-	* src/nact/nact-tree-model-dnd.c: Use GTK_CHECK_VERSION macro.
+	* src/nact/nact-tree-model-dnd.c:
+	* src/nact/nact-gtk-utils.c:
+	* src/nact/nact-iaction-tab.c: Use GTK_CHECK_VERSION macro.
 
 	* configure.ac:
 	* m4/na-check-for-gtk.m4:
